--- a/index.html
+++ b/index.html
@@ -318,6 +318,11 @@
                         </div>
                       </td>
                     </tr>
+                    <tr bgcolor="#FFFFFF">
+                      <td height="0" colspan="2" valign="top">
+                        <div></div>
+                      </td>
+                    </tr>
                     <tr>
                       <td colspan="2" valign="top">
                         <div>
