add WKO 20y image

--- a/index.html
+++ b/index.html
@@ -280,42 +280,25 @@
                     <tr>
                       <td colspan="2" valign="top">
                         <p align="left" class="Stil11">
-                          <span class="Stil17"
-                            >Sich etwas Gutes tun in der Oase für Körper und
-                            Seele</span
-                          ><br />
+                          <span class="Stil17">
+                            Sich etwas Gutes tun in der Oase für Körper und
+                            Seele
+                          </span>
                         </p>
                         <div align="center"></div>
                       </td>
                     </tr>
                     <tr>
-                      <td width="364" valign="top">
-                        <p align="left">
-                          <span class="Stil11"
-                            >Seinem Körper etwas Gutes gönnen, Ruhe,
-                            Entspannung, sanfte Musik, ... ein gutes Gespräch -
-                            diesen Rahmen für voll umfängliches Wohlbefinden
-                            möchte ich Ihnen hier bieten. Denn das ist die Tür
-                            zu einem Leben voller Energie, Kraft und
-                            Freude.</span
-                          >
+                      <td colspan="2" valign="top">
+                        <p>
+                          <span class="Stil11">
+                            Seinem Körper etwas Gutes gönnen, Ruhe, Entspannung,
+                            sanfte Musik, ... ein gutes Gespräch - diesen Rahmen
+                            für voll umfängliches Wohlbefinden möchte ich Ihnen
+                            hier bieten. Denn das ist die Tür zu einem Leben
+                            voller Energie, Kraft und Freude.
+                          </span>
                         </p>
-                        <p align="left">
-                          Seit mehr als 15 Jahren arbeite ich in diesem Bereich.
-                          Wichtig dabei ist für mich den Menschen als "Ganzes"
-                          zu betrachten und, wenn gewünscht, die Behandlung
-                          entsprechend abzustimmen.<br />
-                        </p>
-                      </td>
-                      <td width="166" valign="top">
-                        <div align="center">
-                          <img
-                            src="haagss17-7002.jpg"
-                            alt="Foto: Andreas Cichini"
-                            width="158"
-                            border="1"
-                          />
-                        </div>
                       </td>
                     </tr>
                     <tr bgcolor="#FFFFFF">
@@ -324,14 +307,29 @@
                       </td>
                     </tr>
                     <tr>
-                      <td colspan="2" valign="top">
+                      <td valign="top">
                         <div>
                           <p>
-                            Im Folgenden finden Sie die von mir erlernten
-                            Techniken und Methoden.<br />
-                            Auf Ihre Terminvereinbarung und Ihren Besuch freue
-                            ich mich!
+                            <b>20 Jahre</b> nach der Gründung gratuliert die WKO
+                            mit einer Ehrenurkunde und kommt zum Anstoßen.
+                            <br />
+                            <br />
+                            <b>900 unterschiedliche Körper</b> hatte ich in
+                            dieser Zeit unter meinen Händen, und eine der
+                            längsten Kundinnen war 715 mal bereits zum Behandeln
+                            bei mir. die Sicht auf das Ganze von Körper und
+                            Seele ist mir nach wie vor ein wichtiges Anliegen.
                           </p>
+                        </div>
+                      </td>
+                      <td width="166" valign="top">
+                        <div align="center">
+                          <img
+                            src="wko_20y.jpg"
+                            alt="WKO 20 Jahre Jubiläum"
+                            width="158"
+                            border="1"
+                          />
                         </div>
                       </td>
                     </tr>
